--- a/web_parts/index.html
+++ b/web_parts/index.html
@@ -8,38 +8,83 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="site">
-        <h1><a href="#">TimeSwitch</a></h1>
-        <p>毎日の生活で気になるものを書き留めているブログです</p>
+    <div class="box1">
+        <div class="site">
+            <h1><a href="#">TimeSwitch</a></h1>
+            <!-- <p>毎日の生活で気になるものを書き留めているブログです</p> -->
+        </div>
     </div>
 
-    <div class="menu">
-        <ul>
-            <li><a href="#">トップ</a></li>
-            <li><a href="#">雑貨</a></li>
-            <li><a href="#">カジェット</a></li>
-            <li><a href="#">お出掛け</a></li>
-            <li><a href="#">食べ物</a></li>
-            <li><a href="#">お問い合わせ</a></li>
-        </ul>
+    <div class="box2">
+        <nav class="menu">
+            <ul>
+                <li><a href="#">トップ</a></li>
+                <li><a href="#">雑貨</a></li>
+                <li><a href="#">カジェット</a></li>
+                <li><a href="#">お出掛け</a></li>
+                <li><a href="#">食べ物</a></li>
+                <li><a href="#">お問い合わせ</a></li>
+            </ul>
+        </nav>
     </div>
 
-    <div class="kiji">
-        <h1>もぎたてトマトをおいしく食べたい！</h1>
-        <p>もぎたてトマトを食べたくなって、ちょっと郊外にあるトマト
-            農家さんの直売所まで行ってきました。ここのトマトは新鮮で、
-            美味しくて、お安いという、とってもお買い得なトマトなんです。
-        </p>
+    <div class="boxA">
+        <div class="box3">
+            <article class="kiji">
+                <h1>もぎたてトマトをおいしく食べたい！</h1>
+                
+                <p><img src="./img/tomato.jpg" alt=""></p>
 
-        <p>何と言っても、もぎたてトマトは水洗いしてそのまま
-            たべるのが一番です。暑い日に美味しいトマトにかぶりつくと、
-            それだけで幸せになれます。水分補給もできるので一石二鳥です。
-        </p>
+                <p>もぎたてトマトを食べたくなって、ちょっと郊外にあるトマト
+                    農家さんの直売所まで行ってきました。ここのトマトは新鮮で、
+                    美味しくて、お安いという、とってもお買い得なトマトなんです。
+                </p>
+
+                <p>何と言っても、もぎたてトマトは水洗いしてそのまま
+                    たべるのが一番です。暑い日に美味しいトマトにかぶりつくと、
+                    それだけで幸せになれます。水分補給もできるので一石二鳥です。
+                </p>
+            </article>
+        </div>
+
+        <div class="box4">
+            <aside class="sidemenu">
+                <h1>特集記事</h1>
+                <ul>
+                    <li><a href="#">わかりやすい地図の読み方</a></li>
+                    <li><a href="#">苗から始めるトマト作り</a></li>
+                    <li><a href="#">料理とスマホの便利な関係</a></li>
+                    <li><a href="#">バッテリーを長持ちさせる技</a></li>
+                </ul>
+            </aside>
+
+            <aside class="osusume">
+                <h1>おすすめ記事</h1>
+                <ul>
+                    <li><a href="#">初めてのフラワーアレンジメント</a></li>
+                    <li><a href="#">古い端末が出てきたので充電してみたら・・・</a></li>
+                </ul>
+            </aside>
+
+            <aside class="ninki">
+                <h1>人気の記事</h1>
+                <ul>
+                    <li><a href="#">お花好きにおすすめの鑑賞スポット</a></li>
+                    <li><a href="#">通話アプリの便利な使い方</a></li>
+                    <li><a href="#">森林浴&温泉を満喫するならココ！</a></li>
+                    <li><a href="#">世界各地の買い物袋</a></li>
+                    <li><a href="#">部屋を彩るカラフルな家具</a></li>
+                    <li><a href="#">海の中で出会ったものたち</a></li>
+                </ul>
+            </aside>
+        </div>
     </div>
 
-    <div class="copyright">
-        <p>TimeSwitchは毎日の生活で気になることを書き留めているブログです</p>
-        <p>copyright &copy; TimeSwitch</p>
+    <div class="box5">
+        <div class="copyright">
+            <!-- <p>TimeSwitchは毎日の生活で気になることを書き留めているブログです</p> -->
+            <p>copyright &copy; TimeSwitch</p>
+        </div>
     </div>
 </body>
 </html>
